--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/index.html
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/index.html
@@ -15,6 +15,37 @@
 
 <body>
 
+    <!-- adding a navbar  -->
+
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <!-- this button needs to toglge the links below  -->
+            <a href="" class="navbar-brand">Ristorante Con Fusion</a>
+            <!-- this div section is being targeted by the button toggler  -->
+            <!-- make sure to use the data target above with the same ID here  -->
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./aboutus.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <header class="jumbotron">
         <div class="contianer">
             <div class="row row-header">
