--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/contactus.html
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/contactus.html
@@ -95,6 +95,71 @@
            </div>
             <div class="col-12 col-md-9">
                 Form goes here
+                <br>
+                <form>
+                    <div class="form-group row">
+                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" placeholder="first name" id="firstname" name="firstname">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" id="lastname" name="lastname" placeholder="last name" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
+                        <div class="col-5 col-md-3">
+                            <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code">
+                        </div>
+                        <div class="col-7 col-md-7">
+                            <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="emailid" class="col-md-2 col-form-label">Email</label>
+                        <div class="col-md-10">
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="col-md-6 offset-md-2">
+                            <div class="form-check">
+                                <input type="checkbox" name="approve" id="approve" value="" class="form-check-input">
+                                <label for="approve" class="form-check-label">
+                                    <strong>May we contact you?</strong>
+                                </label>
+                            </div>                            
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select name="" id="" class="form-control">
+                                <option value="Tel">Tel.</option>
+                                <option value="Email">Email</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+
+                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-10">
+                            <textarea name="feedback" id="feedback"  rows="12" class="form-control"></textarea>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button class="btn btn-primary" type="submit">
+                                Send
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
              <div class="col-12 col-md">
             </div>
