--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/aboutus.html
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/aboutus.html
@@ -28,7 +28,7 @@
             </button>
             
             <!-- this button needs to toglge the links below  -->
-            <a href="" class="navbar-brand">Ristorante Con Fusion</a>
+            <a class="navbar-brand mr-auto" href="/"><img src="img/logo.png" height="30" width="41"></a>
             <!-- this div section is being targeted by the button toggler  -->
             <!-- make sure to use the data target above with the same ID here  -->
             <div class="collapse navbar-collapse" id="Navbar">
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                        <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
                     </li>
                 </ul>
             </div>
@@ -57,7 +57,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img class="img-fluid" src="img/logo.png">
                 </div>
             </div>
         </div>
