--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/index.html
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/index.html
@@ -55,8 +55,16 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img class="img-fluid" src="img/logo.png"> 
+                <div class="col-12 col-sm-6 align-self-center"> 
+                    <div class="row">
+                        <div class="col-6 align-self-center">
+                            <img class="img-fluid" src="img/logo.png"> 
+                        </div>
+    
+                        <div class="col-6 align-self-center">
+                            <a href="#reservetable" class="btn btn-sm btn-block btn-warning">Reserve Table</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,11 +72,11 @@
 
     <div class="container">
         <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3 flex-last">
+            <div class="col-12 col-sm-4 col-md-3 flex-last order-2">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
 
-            <div class="media">
+            <div class="col col-sm col-md media order-1">
                 <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
                 <div class="media-body">
                     <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
@@ -86,17 +94,24 @@
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+
+            <div class="col col-sm col-md media">
+                <div class="media-body">
+                    <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                    <p class="d-none d-sm-block">
+                        Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person 
+                    </p>
+                </div>
+                <img src="img/buffet.png" alt="" class="d-flex mr-3 img-thumbnail align-self-center">
             </div>
         </div>
 
+
         <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3 flex-last">
+            <div class="col-12 col-sm-4 col-md-3 flex-last order-2">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div class="media">
+            <div class="col col-sm col-md media order-1">
                 <img class="d-flex mr-3 img-thumbnail align-self-center"
                         src="img/alberto.png" alt="Alberto Somayya">
                 <div class="media-body">
@@ -107,6 +122,68 @@
                         whos-who in the culinary world, he specializes in
                         creating mouthwatering Indo-Italian fusion experiences.
                         </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row align-items-center" style="padding: 25px 0px 25px 0px">
+            <div class="col col-sm-8 offset-sm-2">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body" id="reservetable">
+                        <form>
+                            <div class="form-group row">
+                                <div class="col-sm-2">
+                                    Number of Guests
+                                </div>
+                                <div class="col-sm-10">
+                                    <div class="custom-control custom-control-inline custom-radio">
+                                        <input class="custom-control-input" type="radio" name="pax1" id="pax1">
+                                        <label class="custom-control-label" for="pax1">1</label>
+                                    </div>
+                                    <div class="custom-control custom-control-inline custom-radio">
+                                        <input class="custom-control-input" type="radio" name="pax2" id="pax2">
+                                        <label class="custom-control-label" for="pax2">2</label>
+                                    </div>
+                                    <div class="custom-control custom-control-inline custom-radio">
+                                        <input class="custom-control-input" type="radio" name="pax3" id="pax3">
+                                        <label class="custom-control-label" for="pax3">3</label>
+                                    </div>
+                                    <div class="custom-control custom-control-inline custom-radio">
+                                        <input class="custom-control-input" type="radio" name="pax4" id="pax4">
+                                        <label class="custom-control-label" for="pax4">4</label>
+                                    </div>
+                                    <div class="custom-control custom-control-inline custom-radio">
+                                        <input class="custom-control-input" type="radio" name="pax5" id="pax5">
+                                        <label class="custom-control-label" for="pax5">5</label>
+                                    </div>
+                                    <div class="custom-control custom-control-inline custom-radio">
+                                        <input class="custom-control-input" type="radio" name="pax6" id="pax6">
+                                        <label class="custom-control-label" for="pax6">6</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-sm-2">
+                                    Date and Time
+                                </div>
+
+                                <div class="col-sm-5">
+                                    <input class="form-control" type="date" name="Date" id="Date" placeholder="Date">
+                                </div>
+                                <div class="col-sm-5">
+                                    <input class="form-control" type="time" name="Time" id="Time" placeholder=Time>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-sm-10 offset-sm-2">
+                                    <button class="btn btn-primary" type="submit">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
