--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/aboutus.html
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/aboutus.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <title>Ristorante Con Fusion: About Us</title>
 
@@ -156,7 +156,7 @@
                                 <a data-toggle="collapse" data-target='#agume'>
                                     Agumbe Tang <small>Chief Taste Officer</small> 
                                 </a>
-                            </h3>                        
+                            </h3>
                         </div>
 
                         <div class='collapse' id='agume' role='tabpanel' data-parent='#accordion'>
