--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/index.html
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/index.html
@@ -279,10 +279,14 @@
                         </span>
                    </a>
                     <a href="#mycarousel" role='button' data-slide='next' class="carousel-control-next">
+
                         <span class='carousel-control-next-icon'>
 
                         </span>
                     </a>
+                    <button class="btn btn-small btn-danger" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -386,9 +390,27 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script>
+        // $(document).ready(
+        //     function() {
+        //         $('[data-toggle="tooltip"]').tooltip();
+        //     }
+        // )
+
         $(document).ready(
             function() {
-                $('[data-toggle="tooltip"]').tooltip();
+                $('#carouselButton').click(() => {
+                    if ($('#carouselButton').children('span').hasClass('fa-pause')) 
+                    {
+                        $('#mycarousel').carousel('pause');
+                        $('#carouselButton').children('span').removeClass('fa-pause');
+                        $('#carouselButton').children('span').addClass('fa-play');
+                    } else if ($('#carouselButton').children('span').hasClass('fa-play'))
+                    {
+                        $('#mycarousel').carousel('cycle');
+                        $('#carouselButton').children('span').removeClass('fa-play');
+                        $('#carouselButton').children('span').addClass('fa-pause');
+                    }
+                })
             }
         )
     </script>
